# FPGA-RISCV-Offload-System

./: README.md
hw/rtl/: README.md  avalonmm2aximm_bridge.sv  avalonmm_mux.sv  instruction_memory.sv  ram.sv  register_file.sv  riscv_cpu.sv  riscv_top.sv
sw/: CMakeLists.txt  README.md  cmake.runme.sh  esr_riscv.cmake  runme_cmd.txt
sw/scripts/: hex2bin_convertor.py
sw/src/: main.cpp  sections.lds  startup.cpp
